Demonstrate a bunch more modules for v6